fix: color banding in v9 dark mode theme

--- a/plugins/main/public/styles/theme/dark/index.dark.scss
+++ b/plugins/main/public/styles/theme/dark/index.dark.scss
@@ -5,7 +5,7 @@
 
 /* v9 theme specific overrides */
 .v9 {
-  --wz-bg-dark-color: rgb(2, 2, 14);
+  --wz-bg-dark-color: $ouiPageBackgroundColor;
 }
 
 .theme-dark {
@@ -18,7 +18,7 @@
   }
 
   .application {
-    background: var(--wz-bg-dark-color);
+     background: linear-gradient(180deg, $ouiPageBackgroundColor 0%, $ouiPageBackgroundColor 100%);
   }
 
   #kibana-body {
